# Nuim

./: .gitignore  Config.cmake  MakeProject.sh  MakeSolution.bat  README.md  premake5.lua
D_Engine/: premake5.lua
Engine/: CMakeLists.txt  Engine.vcxproj  Engine.vcxproj.filters  premake5.lua
Engine/src/: Engine.cpp  Engine.h  Nuim.h  nmpch.cpp  nmpch.h
Engine/src/Nuim/: Application.cpp  Application.h  Core.h  glad.c  nmpch.h
Engine/src/Nuim/Components/: Camera.h  Shader.cpp  Shader.h
Engine/src/Nuim/Core/: Application.cpp  Application.h  Application.hpp  Core.h  Defines.h  EntryPoint.h  Input.cpp  MainLoop.h  Platform.h  PlatformDef.h  Shader.cpp  Shader.h  TypeDef.h
Engine/src/Nuim/Engine/: Input.cpp  Input.h  Time.cpp  Time.h
Engine/src/Nuim/EventSystem/: Event.cpp  KeyEvent.cpp  KeyEvent.h  MouseEvent.cpp  MouseEvent.h
Engine/src/Nuim/Events/: ApplicationEvent.h  Event.h  MouseEvent.h
Engine/src/Nuim/Imgui/: imgui.cpp  imgui_impl_dx12.cpp  imgui_impl_dx12.h  imgui_impl_opengl3.cpp  imgui_impl_win32.cpp  imgui_impl_win32.h  imgui_internal.h  imgui_tables.cpp
Engine/src/Nuim/Math/: Math.h  NMath.h
Engine/src/Nuim/Platform/: LinuxWindow.cpp  LinuxWindow.hpp  Window.hpp  WindowsWindow.cpp  WindowsWindow.hpp
Engine/src/Nuim/Renderer/: Camera.cpp  DX_Renderer.cpp  DX_Renderer.hpp  GL_Renderer.cpp  GL_Renderer.hpp  Renderer.h  Renderer.hpp  Renderer2D.cpp  Renderer2D.h  Renderer3D.h  Shader.cpp  Shader.h  Shader.hpp
Nuim/: CMakeLists.txt  Nuim.sln  Nuim.vcxproj  Nuim.vcxproj.filters  imgui.ini  premake5.lua
Nuim/src/: Application.cpp  main.cpp
(+391 files in other folders)
